--- a/app/views/offer.html
+++ b/app/views/offer.html
@@ -1,5 +1,108 @@
-<section class="offer-s1 container-fluid d-flex minh-100vh align-items-center">
+<section class="offer-s1 container-fluid d-flex minh-50vh bg-light align-items-center py-5 border-top border-secondary">
+    <div class="row mx-0 w-100 mt-5">
+        <div class="col-12 col-md-7 minh-25vh order-1 order-md-2"></div>
+        <div class="col-12 col-md-5 minh-50vh order-2 order-md-1 d-flex align-items-center">
+            <div class="w-100 text-center text-md-start text-shadow">
+                <h5 class="text-white">
+                    Sed ut perspiciatis
+                </h5>
+                <h2 class="dispaly-6 fw-bold text-white">
+                    Unde omnis iste
+                </h2>
+                <p class="text-white">
+                    Natus error sit voluptatem accusantium doloremque laudantium, 
+                    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis 
+                    et quasi architecto beatae vitae dicta sunt explicabo. Nemo 
+                    enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut 
+                    fugit, sed quia consequuntur magni dolores eos qui ratione 
+                    voluptatem sequi nesciunt. Neque porro quisquam est
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="offer-s2 container-fluid d-flex minh-100vh align-items-start py-5 border-top border-dark">
     <div class="row mx-0 w-100">
-        
+        <aside class="col-12 col-sm-5 col-md-4 col-lg-3 pt-5">
+            <div class="card opacity-8">
+                <div class="card-header bg-light">
+                    <h5 class="card-title text-secondary float-start">Filter</h5>   
+                    <button class="btn btn-outline-secondary btn-sm float-end rounded" 
+                        data-bs-toggle="collapse" 
+                        data-bs-target="#filters">
+                        +
+                    </button>                         
+                </div>
+                <div class="card-body collapse show" id="filters">
+                    <form class="small">
+                        <fieldset class="mb-3">
+                            <legend>
+                                <h6 class="card-subtitle">Categories</h6>
+                            </legend>                                    
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" />
+                                <label class="form-check-label">Men</label>
+                            </div>                                    
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" />
+                                <label class="form-check-label">Women</label>
+                            </div>                                    
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" />
+                                <label class="form-check-label">Kids</label>
+                            </div>
+                        </fieldset>
+                        <fieldset class="mb-5 w-100">
+                            <legend>
+                                <h6 class="card-subtitle">Clothing</h6>
+                            </legend>                                    
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" />
+                                <label class="form-check-label">Activewear</label>
+                            </div>                                    
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" />
+                                <label class="form-check-label">Blazers</label>
+                            </div>                                    
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" />
+                                <label class="form-check-label">Causal shirts</label>
+                            </div>                                  
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" />
+                                <label class="form-check-label">Coats</label>
+                            </div>                       
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" />
+                                <label class="form-check-label">Denim</label>
+                            </div>                
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" />
+                                <label class="form-check-label">Jackets</label>
+                            </div>           
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" />
+                                <label class="form-check-label">Shorts</label>
+                            </div>        
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" />
+                                <label class="form-check-label">Sweats</label>
+                            </div>     
+                            <div class="form-check ms-2">
+                                <input class="form-check-input" type="checkbox" />
+                                <label class="form-check-label">T-Shirts</label>
+                            </div>
+                        </fieldset>
+                        <div class="w-100 text-end border-top pt-2">
+                            <input type="reset" value="Clear" class="btn btn-sm btn-secondary rounded-pill"/>
+                            <input type="submit" value="Filter" class="btn btn-sm btn-secondary rounded-pill"/>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </aside>
+        <div class="col-12 col-sm-7 col-md-8 col-lg-9">
+
+        </div>
     </div>
 </section>
