--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "KaushanScript";
+  src: url("../fonts/KaushanScript-Regular.ttf");
+}
 /* line 1, ../sass/partials/_layout.scss */
 * {
   box-sizing: border-box;
@@ -563,67 +567,78 @@ body, html {
 }
 
 /* line 2, ../sass/partials/_modules.scss */
+.bg-blue {
+  background-color: #0b2c3d !important;
+}
+
+/* line 7, ../sass/partials/_modules.scss */
 .contact-s3 {
   background-blend-mode: multiply !important;
   background-color: #999 !important;
 }
 
-/* line 8, ../sass/partials/_modules.scss */
+/* line 13, ../sass/partials/_modules.scss */
 .text-shadow {
   text-shadow: 1px 1px 3px #333;
 }
 
-/* line 12, ../sass/partials/_modules.scss */
+/* line 17, ../sass/partials/_modules.scss */
+h1, h2, h3, h4, h5, h6, .nav-link {
+  font-family: "KaushanScript";
+  letter-spacing: 2px;
+}
+
+/* line 21, ../sass/partials/_modules.scss */
 textarea {
   resize: none;
 }
 
-/* line 15, ../sass/partials/_modules.scss */
+/* line 24, ../sass/partials/_modules.scss */
 nav {
   z-index: 10;
 }
 
 @media all and (max-width: 767px) {
-  /* line 21, ../sass/partials/_modules.scss */
+  /* line 30, ../sass/partials/_modules.scss */
   .about-s1, .about-s2, .about-s3 {
     background-blend-mode: multiply !important;
     background-color: #999 !important;
   }
-  /* line 22, ../sass/partials/_modules.scss */
+  /* line 31, ../sass/partials/_modules.scss */
   .about-s1 *, .about-s2 *, .about-s3 * {
     color: #fff !important;
     text-shadow: 1px 1px 3px #333;
   }
 
-  /* line 31, ../sass/partials/_modules.scss */
+  /* line 40, ../sass/partials/_modules.scss */
   .contact-s1, .contact-s2 {
     background-blend-mode: multiply !important;
     background-color: #999 !important;
   }
-  /* line 32, ../sass/partials/_modules.scss */
+  /* line 41, ../sass/partials/_modules.scss */
   .contact-s1 *, .contact-s2 * {
     color: #fff !important;
     text-shadow: 1px 1px 3px #333;
   }
 
-  /* line 41, ../sass/partials/_modules.scss */
+  /* line 50, ../sass/partials/_modules.scss */
   .index-s1 {
     background-blend-mode: multiply !important;
     background-color: #999 !important;
     background-position: left !important;
   }
-  /* line 42, ../sass/partials/_modules.scss */
+  /* line 51, ../sass/partials/_modules.scss */
   .index-s1 * {
     color: #fff !important;
     text-shadow: 1px 1px 3px #333;
   }
 
-  /* line 52, ../sass/partials/_modules.scss */
+  /* line 61, ../sass/partials/_modules.scss */
   .navbar-toggler {
     background-color: #666;
     border-color: #333;
   }
-  /* line 56, ../sass/partials/_modules.scss */
+  /* line 65, ../sass/partials/_modules.scss */
   .navbar-nav {
     background-color: #666;
     border: 1px solid #333;
@@ -631,12 +646,12 @@ nav {
     padding: 10px;
   }
 
-  /* line 64, ../sass/partials/_modules.scss */
+  /* line 73, ../sass/partials/_modules.scss */
   .offer-s1 {
     background-blend-mode: multiply !important;
     background-color: #999 !important;
   }
-  /* line 65, ../sass/partials/_modules.scss */
+  /* line 74, ../sass/partials/_modules.scss */
   .offer-s1 * {
     color: #fff !important;
     text-shadow: 1px 1px 3px #333;
