--- a/sass/partials/_modules.scss
+++ b/sass/partials/_modules.scss
@@ -1,3 +1,8 @@
+.bg{
+    &-blue{
+        background-color: $color__blue!important;
+    }
+}
 .contact{
     &-s3{
         background-blend-mode: multiply !important;
@@ -8,6 +13,10 @@
     &-shadow{
         text-shadow: $text__shadow;
     }
+}
+h1,h2,h3,h4,h5,h6,.nav-link{
+    font-family: "KaushanScript";
+    letter-spacing: 2px;
 }
 textarea{
     resize: none;
