--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -32,6 +32,7 @@ $bg__img-arr:
     $bg__offer-img,
     $bg__privacy-img,
     $bg__user-img;
+$color__blue: #0b2c3d;
 $color__shadow: #333;
 $footer__height: 41px;
 $text__shadow: 1px 1px 3px $color__shadow; 
