--- a/app/components/footer.html
+++ b/app/components/footer.html
@@ -1,4 +1,4 @@
-<footer class="container-fluid d-flex text-dark align-items-center bg-dark text-white pt-3 opacity-9 border-top">
+<footer class="container-fluid d-flex align-items-center bg-blue text-white pt-3 opacity-9 border-top border-dark">
     <div class="row mx-0 w-100 small opacity-9">
         <div class="col-12 col-md-6 col-lg-5 text-center text-md-start">
             <h6 class="text-uppercase mb-3">
